fixing z-index

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ html{
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.5s ease-in-out;
-    z-index: 9999999;
+    z-index: 85;
 }
 .nav ul {
     display: none !important;
@@ -268,6 +268,25 @@ html{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: 0.1s ease-in;
     cursor: pointer;
+}
+
+.btn-reach-me .btn-reach{
+  text-align: center;
+  text-decoration: none;
+  padding: 10px;
+  width: 187px;
+  border-radius: 20px;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 23px;
+  background-color: var(--underline);
+  color: var(--highlight);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.1s ease-in;
+  cursor: pointer;
 }
 .btn-reach-me button:hover{
     color: var(--highlight);   
@@ -821,7 +840,7 @@ form textarea{
   border-radius: 10px;
   min-width: 350px;
   min-height: 90px;
-  z-index: 999999911;
+  z-index: 100;
   box-shadow: var(--shadow);  
   position: fixed;
   top:5%;
